[package]
name = "tree-sitter-c"
description = "Cup grammar for the tree-sitter parsing library"
version = "0.20.6"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>", "Christian Schäl <christian.schael87@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "cup", "c"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-c"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.10"

[build-dependencies]
cc = "~1.0"
